--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "~ 4.16.0",
     "express-session": "~1.0.4",
     "format": "^0.2.2",
-    "jade": "~1.3.0",
+    "ibmiotf": "^0.2.40",
+    "jade": "~1.11.0",
     "jquery": "^3.2.1",
     "loglevel": "^1.6.0",
     "moment": "~2.20.1",
