--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bcrypt-nodejs": "*",
+    "bluebird": "^3.5.1",
     "body-parser": "~1.18.2",
     "btoa": "^1.1.2",
     "connect-flash": "*",
@@ -17,7 +18,6 @@
     "express-session": "~1.0.4",
     "format": "^0.2.2",
     "ibmiotf": "^0.2.40",
-    "jade": "~1.11.0",
     "jquery": "^3.2.1",
     "loglevel": "^1.6.0",
     "moment": "~2.20.1",
@@ -27,6 +27,7 @@
     "mqtt": "~2.15.1",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
+    "pug": "^2.0.0-rc.4",
     "static-favicon": "~1.0.0"
   }
 }
